<resources>
    <string name="app_name">MathOnGo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="please_signing_to_continue">Please signing to continue</string>
    <string name="welcome_to_reciipiie">Welcome to <b>Rec</b>ii<b>p</b>iie</string>
    <string name="gmail_login">Gmail Login</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="hey">👋 Hey </string>
    <string name="discover_tasty_and_healthy_receipt">Discover tasty and healthy receipt</string>
    <string name="search_any_recipe">Search any recipe</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="shahi_paneer">Shahi Paneer</string>
    <string name="ready_in_25_min">Ready in 25 min</string>
    <string name="loading">Loading…</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="all_recipes">All recipes</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="_25_min">25 min</string>
    <string name="ready_in">Ready in</string>
    <string name="servings">Servings</string>
    <string name="_6">6</string>
    <string name="price_serving">Price/serving</string>
    <string name="_156">156</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Sagittis facilisis aliquet aenean lorem ullamcorper et. Risus lectus id sed fermentum in. At porta sed ut lorem volutpat elementum mi sollicitudin. Laoreet tempor nullam velit dui amet mauris sed ac sem.</string>
    <string name="equipments">Equipments</string>
    <string name="quick_summary">Quick Summary</string>
    <string name="back">Back</string>
    <string name="get_ingredients">Get Ingredients</string>
    <string name="get_full_recipe">Get full recipe</string>
    <string name="hide_ingredient">Hide Ingredient</string>
    <string name="get_similar_recipe">Get similar recipe</string>
    <string name="full_recipe">Full recipe</string>
    <string name="similar_recipes">Similar recipes</string>
    <string name="similar_recipes_not_found">Similar Recipes not found</string>
    <string name="default_web_client_id">1005408726708-ipacg44ssh9qbdipt6udlf5o7pr2asqj.apps.googleusercontent.com</string>

</resources>