<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.AllRecipesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/hey"
            android:textSize="16sp"
            android:textColor="@color/gray_9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/discover_tasty_and_healthy_receipt"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="@color/gray_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12sp"
            android:background="@drawable/search_bg"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/search_icon"
                android:contentDescription="@string/search_any_recipe"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_any_recipe"
                android:textColor="@color/gray_6"
                android:fontFamily="@font/inter_regular"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_recipes"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/primary_gray_10"
            android:layout_marginTop="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_recipes_rv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_recipes"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/primary_gray_10"
            android:layout_marginTop="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_recipes_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>