<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.RecipeDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipe_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/recipe_overlay_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            android:src="@drawable/popular_recipe_item_gradiant"
            app:layout_constraintBottom_toBottomOf="@+id/recipe_img"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/favourite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/circle_bg"
            android:contentDescription="@string/favourite"
            android:padding="16dp"
            android:src="@drawable/heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recipe_title_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/primary_gray_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/recipe_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_img">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingVertical="20sp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:background="@drawable/recipe_bg_stroke"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/ready_in"
                        android:textColor="@color/primary_gray_6"
                        android:textSize="12sp" />

                    <TextView

                        android:id="@+id/preparation_time_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/inter_semi_bold"
                        android:textColor="@color/primary"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:background="@drawable/recipe_bg_stroke"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/servings"
                        android:textColor="@color/primary_gray_6"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/servings_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/inter_semi_bold"
                        android:textColor="@color/primary"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:background="@drawable/recipe_bg_stroke"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/price_serving"
                        android:textColor="@color/primary_gray_6"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/price_per_serving_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/inter_semi_bold"
                        android:textColor="@color/primary"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/ingredients"
                android:textColor="@color/primary_gray_10" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipes_ingredients_rv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/instructions"
                android:textColor="@color/primary_gray_10" />

            <TextView
                android:id="@+id/instructions_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/primary_gray_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/equipments"
                android:layout_marginTop="24dp"
                android:textColor="@color/primary_gray_10" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipes_equipments_rv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/quick_summary"
                android:textColor="@color/primary_gray_10" />

            <TextView
                android:id="@+id/quick_summary_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/primary_gray_6" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>